# SilverPopn

./: CMakeLists.txt  README.md  popn_pico.uf2  popn_pico_nomaple.uf2
design/: 6mm mdf back.frw  6mm mdf bottom.frw  6mm mdf front.frw  6mm mdf left.frw  6mm mdf right.frw  6mm mdf top.frw  final_laser.dxf  final_laser.frw
design_100mm/: 3mm acryl top.frw  6mm mdf back.frw  6mm mdf bottom.frw  6mm mdf front.frw  6mm mdf left.frw  6mm mdf right.frw  6mm mdf top.frw  final_laser.dxf  final_laser.frw
src/: CMakeLists.txt  arch.c  board_defs.h  buttons.c  buttons.h  config.c  config.h  controller_simulator.cpp  controller_simulator.h  main.c  main.cpp  maple.c  maple.h  psx.c  psxSPI.pio  psx_defs.h  psx_pio.c  rgb.c  rgb.h  state_machine.c  usb_descriptors.c  usb_descriptors.h
